# antNet_demo

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  TODO.md  build.bat  build.py  build.sh  display_folder_tree.sh  main.py  requirements.txt
.cache/clangd/index/: antnet_brute_force_types.h.CFF9A6449864262B.idx  antnet_config_types.h.4735AFE9D550BB50.idx  antnet_network_types.h.EE458B894C5372FB.idx  antnet_path_types.h.0ECD876F9C20A0CB.idx  backend.c.CB0CA6B630096275.idx  backend.h.4B9182C48F9F9269.idx  backend_thread_defs.h.4FC5BFFCFCDA6F6B.idx  backend_topology.c.3E356DB7C62425DE.idx  backend_topology.h.4F2A14B865CCBD45.idx  config_manager.c.65B7B9A5071A24B1.idx  config_manager.h.228BDF502776CB72.idx  cpu_ACOv1.c.8E9779FF2721E58A.idx  cpu_ACOv1.h.C45350129FE84F3E.idx  cpu_brute_force.c.8D047161E1AF63DA.idx  cpu_brute_force.h.631756F3CF32D630.idx  error_codes.h.17CBAEA7697C407C.idx  hop_map_manager.c.F678EE6C0BDB65F1.idx  hop_map_manager.h.2367DDD23D0E6058.idx  ini.c.4F56BAA0F3B41DAA.idx  ini.h.6240A8723558F66C.idx  random_algo.c.F015EA94D47A4756.idx  random_algo.h.14D78E5CDE4D5A87.idx
.github/workflows/: build-and-test.yml
config/: settings.ini
include/: antnet_brute_force_types.h  antnet_config_types.h  antnet_network_types.h  antnet_path_types.h  backend.h  backend_thread_defs.h  backend_topology.h  cffi_entrypoint.h  config_manager.h  cpu_ACOv1.h  cpu_brute_force.h  error_codes.h  heatmap_renderer.h  hop_map_manager.h  random_algo.h
include/algo/cpu/: README.md  cpu_ACOv1.h  cpu_ACOv1_path_reorder.h  cpu_ACOv1_shared_structs.h  cpu_ACOv1_threaded.h  cpu_brute_force.h  cpu_random_algo.h  cpu_random_algo_path_reorder.h
include/consts/: error_codes.h
include/core/: README.md  backend.h  backend_init.h  backend_params.h  backend_solvers.h  backend_thread_defs.h  backend_topology.h  score_evaluation.h
include/managers/: README.md  config_manager.h  cpu_acoV1_algo_manager.h  cpu_brute_force_algo_manager.h  cpu_random_algo_manager.h  hop_map_manager.h  ranking_manager.h
include/rendering/: README.md  heatmap_renderer.h  heatmap_renderer_api.h  heatmap_renderer_async.h  path_renderer.h
include/types/: README.md  antnet_aco_v1_params.h  antnet_aco_v1_types.h  antnet_brute_force_types.h  antnet_config_types.h  antnet_network_types.h  antnet_path_types.h  antnet_ranking_types.h  antnet_sasa_types.h
roadmap/: antnet_demo_roadmap.md
src/: build.py
src/c/: README.md  backend.c  backend_topology.c  config_manager.c  cpu_ACOv1.c  cpu_brute_force.c  heatmap_renderer.c  heatmap_renderer_async.c  hop_map_manager.c  random_algo.c
src/c/algo/cpu/: README.md  cpu_ACOv1.c  cpu_ACOv1_path_reorder.c  cpu_ACOv1_shared_structs.c  cpu_ACOv1_threaded.c  cpu_brute_force.c  cpu_random_algo.c  cpu_random_algo_path_reorder.c
src/c/core/: README.md  backend.c  backend_init.c  backend_params.c  backend_solvers.c  backend_topology.c  score_evaluation.c
src/c/managers/: README.md  config_manager.c  cpu_acoV1_algo_manager.c  cpu_brute_force_algo_manager.c  cpu_random_algo_manager.c  hop_map_manager.c  ranking_manager.c
src/c/rendering/: README.md  heatmap_renderer.c  heatmap_renderer_api.c  heatmap_renderer_async.c  path_renderer.c
src/python/consts/_generated/: error_codes_generated.py
src/python/core/: callback_adapter.py  core_manager.py  worker.py
src/python/ffi/: __init__.py  backend_api.py  build_builder.py  cdef_string.py  ffi_build.py  generate_cffi_defs.py
src/python/gui/: aco_visu_widget.py  control_widget.py  fit_width_button.py  fit_width_label.py  font_lut.py  main_window.py  uniform_spinbox_manager.py
src/python/gui/consts/: algo_consts.py  gui_consts.py
src/python/gui/graph_view/: edge_item.py  graph_canvas.py  graph_routing.py  graph_scene.py  heatmap_generator.py  node_item.py
src/python/gui/managers/: cpu_acoV1_algo_manager.c  fit_width_button_manager.py  fit_width_checkbox_manager.py  fit_width_label_manager.py  fit_width_spinbox_manager.py  fit_width_tabwidget_manager.py  hop_map_manager.py  path_computation.py  signal_manager.py
src/python/gui/widgets/: aco_visu_widget.py  control_widget.py  fit_width_button.py  fit_width_checkbox.py  fit_width_label.py  fit_width_spinbox.py  tab_sheet_widget.py
src/python/tools/: ai_annotate_relative_path.py  backend_end_api_builder.py  build_builder.py  errors_const_c2python.py  generate_cffi_defs.py  generate_cmake.py  generate_structs.py  preprocess_headers.py
stub_headers/: egl.h  gl2.h  gl3.h  pthread.h  stdbool.h  stddef.h  stdint.h
tests/: test_backend_api.py  test_render_heatmap_visual_output.py  test_render_path_grid.py
(+2 files in other folders)
